--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 {% load staticfiles %}
 
 {% block page %}
+{% include 'blocks/header_block.html' %}
 <!--SECTION PROJECTS START-->
 {% include 'blocks/our_projects.html' %}
 <!--SECTION PROJECTS END-->
