--- a/templates/blocks/header_top_ad.html
+++ b/templates/blocks/header_top_ad.html
@@ -2,90 +2,38 @@
 <!--HEADER START-->
 <header class="header_wrapper">
     <div class="projects_logo_wrapper">
-        <div class="learn_python">
-            <div class="logo">
-                <a href="">
-                    <p class="logo_title">
-                        <span class="blue">L</span>EARN <span class="yellow">P</span>YTHON
-                    </p>
-                </a>
+        {% for slide in slider %}
+            <div class="{{ slide.color }}">
+                <div class="logo">
+                    {{ slide.logo|safe }}
+                </div>
             </div>
-        </div>
-        <div class="python_week">
-            <div class="logo">
-                <a href="#">
-                    <img src="{% static 'img/python_week.png' %}" alt="logo">
-                </a>
-            </div>
-        </div>
-        <div class="moscow_python">
-            <div class="logo">
-                <a href="#">
-                    <img src="{% static 'img/moscow_python.png' %}" alt="logo">
-                </a>
-            </div>
-        </div>
+        {% endfor %}
         <div class="projects_list">
-            <div class="project_item learn_python">
+            {% for slide in slider %}
+                <div class="project_item {{ slide.color }}">
                 <h6>Наш проект</h6>
                 <div class="logo">
-                    <a href="">
-                        <p class="logo_title">
-                            <span class="blue">L</span>EARN <span class="yellow">P</span>YTHON
-                        </p>
-                    </a>
+                    {{ slide.logo|safe }}
                 </div>
                 <h4>
-                    Курс программирования
-                    на Python 3.8 для любого уровня
-                    с упором на практику
+                    {{ slide.title }}
                 </h4>
                 <p class="date">
-                    <span>[</span>5 — 7 ноября 2020<span>]</span>
+                    {{ slide.date|safe }}
                 </p>
-                <p class="descr">Место для краткого описания</p>
+                <p class="descr">{{ slide.description }}</p>
             </div>
-            <div class="project_item python_week">
-                <h6>Наш проект</h6>
-                <div class="logo">
-                    <a href="#">
-                        <img src="{% static 'img/python_week.png' %}" alt="logo">
-                    </a>
-                </div>
-                <h4>
-                    Профессиональная
-                    конференция для Python
-                    разработчиков
-                </h4>
-                <p class="date">
-                    14 — 18 сентября 2020
-                </p>
-                <p class="descr">Место для краткого описания</p>
-            </div>
-            <div class="project_item moscow_python">
-                <h6>Наш проект</h6>
-                <div class="logo">
-                    <a href="#">
-                        <img src="{% static 'img/moscow_python.png' %}" alt="logo">
-                    </a>
-                </div>
-                <h4>
-                    Подкаст о Python. Актуальные события мира IT, тренды, подходы и тд.
-                </h4>
-                <p class="date">
-                    Каждую неделю
-                </p>
-                <p class="descr">Место для краткого описания</p>
-            </div>
+            {% endfor %}
         </div>
     </div>
     <div class="container">
         <div class="main_menu_logo_wrapper">
             <div class="mobile_menu_bg"></div>
             <div class="logo">
-                <a href="">
-                    <img src="{% static 'img/python.png' %}" alt="logo" class="image">
-                    <img src="{% static 'img/PythonRu.png' %}" alt="logo" class="name">
+                <a href="/">
+                    <img src="{% static "/img/python.png" %}" alt="logo" class="image">
+                    <img src="{% static "/img/PythonRu.png" %}" alt="logo" class="name">
                 </a>
             </div>
             <div class="main_menu_wrapper">
@@ -100,7 +48,7 @@
                             <li {% if page == "index" %}
                             class="active"
                             {% endif %}>
-                                <a href="/">О проекте</a>
+                                <a href="/">Главная</a>
                             </li>
                             <li {% if page == "blog" %}
                             class="active"
@@ -128,14 +76,14 @@
                         <div class="python_week">
                             <div class="logo">
                                 <a href="#">
-                                    <img src="{% static 'img/python_week.png' %}" alt="logo">
+                                    <img src="{% static "/img/python_week.png" %}" alt="logo">
                                 </a>
                             </div>
                         </div>
                         <div class="moscow_python">
                             <div class="logo">
                                 <a href="#">
-                                    <img src="{% static 'img/moscow_python.png' %}" alt="logo">
+                                    <img src="{% static "/img/moscow_python.png" %}" alt="logo">
                                 </a>
                             </div>
                         </div>
