--- a/templates/events.html
+++ b/templates/events.html
@@ -82,7 +82,7 @@
                                          <div class="day">{{ event.date|date:'d M Y' }} / <span class="time">{{ event.date|date:'H:m' }}</span></div>
                                      </div>
                                      <div class="price">
-                                         5500
+                                         free
                                          <i class="fa fa-rub" aria-hidden="true"></i>
                                      </div>
                                  </div>
