--- a/templates/events.html
+++ b/templates/events.html
@@ -66,12 +66,12 @@
                         <article>
                             <div class="event">
                                 <div class="image_wrapper">
-                                    <img src="static/img/event.png" alt="event">
+                                    <img src="/static/img/event.png" alt="event">
                                 </div>
                              <div class="content_wrapper">
                                  <div class="event_info">
                                      <div class="event_logo">
-                                         <img src="static/img/event_logo.png" alt="event_logo">
+                                         <img src="/static/img/event_logo.png" alt="event_logo">
                                      </div>
                                      <div class="event_date">
                                         <p class="date">{{ event.date|date:'d' }}</p>
