--- a/templates/events.html
+++ b/templates/events.html
@@ -82,8 +82,8 @@
                                          <div class="day">{{ event.date|date:'d M Y' }} / <span class="time">{{ event.date|date:'H:m' }}</span></div>
                                      </div>
                                      <div class="price">
-                                         free
-                                         <i class="fa fa-rub" aria-hidden="true"></i>
+                                         Free
+{#                                         <i class="fa fa-rub" aria-hidden="true"></i>#}
                                      </div>
                                  </div>
                                  <div class="event_title">
