--- a/templates/blocks/badges_block.html
+++ b/templates/blocks/badges_block.html
@@ -2,36 +2,36 @@
 <!--SECTION BADGES START-->
 <section class="badges_wrapper">
     <div class="container">
-        <div class="badges_list">
-            <div class="badges_item">
-                <img src="{% static "/img/open.png" %}" alt="badge">
-                <p>
-                    Открытое
-                    сообщество
-                </p>
-            </div>
-            <div class="badges_item">
-                <img src="{% static "/img/speech-bubble.png" %}" alt="badge">
-                <p>
-                    Поддержка
-                    от практиков
-                </p>
-            </div>
-            <div class="badges_item">
-                <img src="{% static "/img/python2.png" %}" alt="badge">
-                <p>
-                    Не а бы какие
-                    ребата
-                </p>
-            </div>
-            <div class="badges_item">
-                <img src="{% static "/img/social.png" %}" alt="badge">
-                <p>
-                    Не только
-                    мемчики постим
-                </p>
-            </div>
-        </div>
+{#        <div class="badges_list">#}
+{#            <div class="badges_item">#}
+{#                <img src="{% static "/img/open.png" %}" alt="badge">#}
+{#                <p>#}
+{#                    Открытое#}
+{#                    сообщество#}
+{#                </p>#}
+{#            </div>#}
+{#            <div class="badges_item">#}
+{#                <img src="{% static "/img/speech-bubble.png" %}" alt="badge">#}
+{#                <p>#}
+{#                    Поддержка#}
+{#                    от практиков#}
+{#                </p>#}
+{#            </div>#}
+{#            <div class="badges_item">#}
+{#                <img src="{% static "/img/python2.png" %}" alt="badge">#}
+{#                <p>#}
+{#                    Не а бы какие#}
+{#                    ребата#}
+{#                </p>#}
+{#            </div>#}
+{#            <div class="badges_item">#}
+{#                <img src="{% static "/img/social.png" %}" alt="badge">#}
+{#                <p>#}
+{#                    Не только#}
+{#                    мемчики постим#}
+{#                </p>#}
+{#            </div>#}
+{#        </div>#}
     </div>
 </section>
 <!--SECTION BADGES END-->
