--- a/templates/blocks/footer_block.html
+++ b/templates/blocks/footer_block.html
@@ -11,13 +11,13 @@
             <div class="bottom_menu">
                 <ul class="footer_nav">
                     <li>
-                        <a href="./main.html">О проекте</a>
+                        <a href="/">О проекте</a>
                     </li>
                     <li>
-                        <a href="blog.html">Блог</a>
+                        <a href="/blog">Блог</a>
                     </li>
                     <li>
-                        <a href="events.html">Мероприятия</a>
+                        <a href="/events/">Мероприятия</a>
                     </li>
                 </ul>
             </div>
